--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@ layout: default
         <em><strong>NOTE:</strong> This is not the official manual to the C Programming Language (aka ISO C99). <wbr>This is just a place for reference in case of the <a href="https://www.iso.org/standard/74528.html">official C manual, ISO/IEC 9899:2018</a></em><br>
         <h3>complex.h</h3>
         <ul>
-            <li>cabs</li>
-            <li>carg</li>
-            <li>cimag</li>
-            <li>creal</li>
+            <li>cabs()</li>
+            <li>carg()</li>
+            <li>cimag()</li>
+            <li>creal()</li>
         </ul>
         <h3>ctype.h</h3>
         <ul>
-            <li>isalnum</li>
-            <li>isalpha</li>
-            <li>isdigit</li>
-            <li>isspace</li>
+            <li>isalnum()</li>
+            <li>isalpha()</li>
+            <li>isdigit()</li>
+            <li>isspace()</li>
         </ul>
         <h3>errno.h</h3>
         <ul>
-            <li>errno</li>
-            <li>perror</li>
-            <li>strerror</li>
+            <li>errno()</li>
+            <li>perror()</li>
+            <li>strerror()</li>
         </ul>
         <h3>limits.h</h3>
         <h3>locale.h</h3>
         <h3>math.h</h3>
         <ul>
-            <li>sin</li>
-            <li>cos</li>
-            <li>tan</li>
-            <li>sqrt</li>
+            <li>sin()</li>
+            <li>cos()</li>
+            <li>tan()</li>
+            <li>sqrt()</li>
         </ul>
         <h3>regex.h</h3>
         <h3>search.h</h3>
@@ -49,37 +49,43 @@ layout: default
         <h3>stdint.h</h3>
         <h3>stdio.h</h3>
         <ul>
-            <li>printf</li>
-            <li>scanf</li>
-            <li>fopen</li>
-            <li>fclose</li>
+            <li><a href="functions/printf">printf()</a></li>
+            <li><a href="functions/printf">fprintf()</a></li>
+            <li><a href="functions/printf">sprintf()</a></li>
+            <li>scanf()</li>
+            <li>fopen()</li>
+            <li>fclose()</li>
         </ul>
         <h3>stdlib.h</h3>
         <ul>
-            <li>malloc</li>
-            <li>free</li>
-            <li>atoi</li>
-            <li>exit</li>
+            <li>malloc()</li>
+            <li>free()</li>
+            <li>atoi()</li>
+            <li>exit()</li>
         </ul>
         <h3>string.h</h3>
         <ul>
-            <li>strcpy</li>
-            <li>strcat</li>
-            <li>strlen</li>
-            <li>strcmp</li>
+            <li>mempcpy()</li>
+            <li>strcpy()</li>
+            <li>strcat()</li>
+            <li>strlen()</li>
+            <li>strcmp()</li>
         </ul>
         <h3>strings.h</h3>
+        <ul>
+            <li>strcasecmp(</li>
+        </ul>
         <h3>time.h</h3>
         <ul>
-            <li>time</li>
-            <li>difftime</li>
-            <li>mktime</li>
+            <li>time()</li>
+            <li>difftime()</li>
+            <li>mktime()</li>
         </ul>
         <h3>unistd.h</h3>
         <ul>
-            <li>getpid</li>
-            <li>fork</li>
-            <li>exec</li>
+            <li>getpid()</li>
+            <li>fork()</li>
+            <li>exec()</li>
         </ul>
     </body>
 </html>
