--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@ layout: default
         </h1>
         <em><strong>NOTE:</strong> This is not the official manual to the C Programming Language (aka ISO C99). <wbr>This is just a place for reference in case of the <a href="https://www.iso.org/standard/74528.html">official C manual, ISO/IEC 9899:2018</a></em><br>
         <h3>complex.h</h3>
-        <ul>
+        <ul id="ulcomplex.h">
             <li>cabs()</li>
             <li>carg()</li>
             <li>cimag()</li>
             <li>creal()</li>
         </ul>
         <h3>ctype.h</h3>
-        <ul>
+        <ul id="ulctype.h">
             <li>isalnum()</li>
             <li>isalpha()</li>
             <li>isdigit()</li>
             <li>isspace()</li>
         </ul>
         <h3>errno.h</h3>
-        <ul>
+        <ul id="ulerrno.h">
             <li>errno()</li>
             <li>perror()</li>
             <li>strerror()</li>
@@ -35,7 +35,7 @@ layout: default
         <h3>limits.h</h3>
         <h3>locale.h</h3>
         <h3>math.h</h3>
-        <ul>
+        <ul id="ulmath.h">
             <li>sin()</li>
             <li>cos()</li>
             <li>tan()</li>
@@ -48,7 +48,7 @@ layout: default
         <h3>stddef.h</h3>
         <h3>stdint.h</h3>
         <h3>stdio.h</h3>
-        <ul>
+        <ul id="ulstdio.h">
             <li><a href="functions/printf">printf()</a></li>
             <li><a href="functions/printf">fprintf()</a></li>
             <li><a href="functions/printf">sprintf()</a></li>
@@ -57,14 +57,14 @@ layout: default
             <li>fclose()</li>
         </ul>
         <h3>stdlib.h</h3>
-        <ul>
+        <ul id="ulstdlib.h">
             <li>malloc()</li>
             <li>free()</li>
             <li>atoi()</li>
             <li>exit()</li>
         </ul>
         <h3>string.h</h3>
-        <ul>
+        <ul id="ulstring.h">
             <li>mempcpy()</li>
             <li>strcpy()</li>
             <li>strcat()</li>
@@ -72,17 +72,17 @@ layout: default
             <li>strcmp()</li>
         </ul>
         <h3>strings.h</h3>
-        <ul>
-            <li>strcasecmp(</li>
+        <ul id="ulstrings.h">
+            <li>strcasecmp()</li>
         </ul>
         <h3>time.h</h3>
-        <ul>
+        <ul id="ultime.h">
             <li>time()</li>
             <li>difftime()</li>
             <li>mktime()</li>
         </ul>
         <h3>unistd.h</h3>
-        <ul>
+        <ul id="ulunistd.h">
             <li>getpid()</li>
             <li>fork()</li>
             <li>exec()</li>
