--- a/functions/printf/index.html
+++ b/functions/printf/index.html
@@ -11,7 +11,7 @@ layout: default
         <h1 id="!">
             printf - Prints out to stdin<br>fprintf - Prints out to a FILE *<br>sprintf - Prints out to a const char *
         </h1>
-        <a href="../../#ulstdio.h">&lt;&lt; BACK</a>
+        <a href="../../index.html#ulstdio.h">&lt;&lt; BACK</a>
         <p>
             <h1 id="synopsis">SYNOPSIS</h1>
             <h2>Prototype - Simple</h2>
