--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@ layout: default
             ISO C99 Manual Page
         </h1>
         <em><strong>NOTE:</strong> This is not the official manual to the C Programming Language (aka ISO C99). <wbr>This is just a place for reference in case of the <a href="https://www.iso.org/standard/74528.html">official C manual, ISO/IEC 9899:2018</a></em><br>
-        <h3>complex.h</h3>
-        <ul id="ulcomplex.h">
+        <h3 id="complex.h">complex.h</h3>
+        <ul>
             <li>cabs()</li>
             <li>carg()</li>
             <li>cimag()</li>
             <li>creal()</li>
         </ul>
-        <h3>ctype.h</h3>
-        <ul id="ulctype.h">
+        <h3 id="ctype.h">ctype.h</h3>
+        <ul>
             <li>isalnum()</li>
             <li>isalpha()</li>
             <li>isdigit()</li>
             <li>isspace()</li>
         </ul>
-        <h3>errno.h</h3>
-        <ul id="ulerrno.h">
+        <h3 id="errno.h">errno.h</h3>
+        <ul>
             <li>errno()</li>
             <li>perror()</li>
             <li>strerror()</li>
         </ul>
         <h3>limits.h</h3>
         <h3>locale.h</h3>
-        <h3>math.h</h3>
-        <ul id="ulmath.h">
+        <h3 id="math.h">math.h</h3>
+        <ul>
             <li>sin()</li>
             <li>cos()</li>
             <li>tan()</li>
@@ -47,8 +47,8 @@ layout: default
         <h3>stdarg.h</h3>
         <h3>stddef.h</h3>
         <h3>stdint.h</h3>
-        <h3>stdio.h</h3>
-        <ul id="ulstdio.h">
+        <h3 id="stdio.h">stdio.h</h3>
+        <ul>
             <li><a href="functions/printf">printf()</a></li>
             <li><a href="functions/printf">fprintf()</a></li>
             <li><a href="functions/printf">sprintf()</a></li>
@@ -56,33 +56,33 @@ layout: default
             <li>fopen()</li>
             <li>fclose()</li>
         </ul>
-        <h3>stdlib.h</h3>
-        <ul id="ulstdlib.h">
+        <h3 id="stdlib.h">stdlib.h</h3>
+        <ul>
             <li>malloc()</li>
             <li>free()</li>
             <li>atoi()</li>
             <li>exit()</li>
         </ul>
-        <h3>string.h</h3>
-        <ul id="ulstring.h">
+        <h3 id="string.h">string.h</h3>
+        <ul>
             <li>mempcpy()</li>
             <li>strcpy()</li>
             <li>strcat()</li>
             <li>strlen()</li>
             <li>strcmp()</li>
         </ul>
-        <h3>strings.h</h3>
-        <ul id="ulstrings.h">
+        <h3 id="strings.h">strings.h</h3>
+        <ul>
             <li>strcasecmp()</li>
         </ul>
-        <h3>time.h</h3>
-        <ul id="ultime.h">
+        <h3 id="time.h">time.h</h3>
+        <ul>
             <li>time()</li>
             <li>difftime()</li>
             <li>mktime()</li>
         </ul>
-        <h3>unistd.h</h3>
-        <ul id="ulunistd.h">
+        <h3 id="unistd.h">unistd.h</h3>
+        <ul>
             <li>getpid()</li>
             <li>fork()</li>
             <li>exec()</li>
