--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
         <h1>
             ISO C99 Manual Page
         </h1>
-        <em><strong>NOTE:</strong> This is not the official manual to the C Programming Language (aka ISO C99). <wbr>This is just a place for reference in case of the <a href="https://www.iso.org/standard/74528.html">official C manual, ISO/IEC 9899:2018</a></em><br>
+        <em><strong>NOTE:</strong> This is not the official manual to the C Programming Language <wbr>(aka ISO C99, now ISO/IEC 9899:2024 aka C23). <wbr><br>This is just a place for reference, the official C manual might be kinda hard to read: <a href="https://www.iso.org/standard/82075.html">official C manual, ISO/IEC 9899:2024</a></em><br>
         <h3 id="complex.h">complex.h</h3>
         <ul>
             <li>cabs()</li>
