--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@ layout: default
         <ul>
             <li>malloc()</li>
             <li>free()</li>
-            <li>atoi()</li>
+            <li><a href="functions/atoq">atoi()</a></li>
+            <li><a href="functions/atoq">atol()</a></li>
+            <li><a href="functions/atoq">atoll()</a></li>
+            <li>strtol()</li>
+            <li>strtoll()</li>
+            <li>strtoul()</li>
+            <li>strtoull()</li>
+            <li>atof()</li>
+            <li>strtof()</li>
+            <li>strtod()</li>
+            <li>strtold()</li>
             <li>exit()</li>
         </ul>
         <h3 id="string.h">string.h</h3>
