--- a/functions/atoq/index.html
+++ b/functions/atoq/index.html
@@ -11,7 +11,7 @@ layout: default
         <h1 id="!">
             atoi - converts a string to an integer<br>atol - converts a string to a long<br>atoll - converts a string to a long long
         </h1>
-        <a href="../../index.html#stdio.h">&lt;&lt; BACK</a>
+        <a href="../../index.html#stdlib.h">&lt;&lt; BACK</a>
         <p>
             <h1 id="synopsis">SYNOPSIS</h1>
             <code class="code code-snippet">
