added a <p> tag for dprintf, snprintf, vprintf, vfprintf, vsprintf, vdprintf, vsnprintf in functions/printf

--- a/functions/printf/index.html
+++ b/functions/printf/index.html
@@ -11,6 +11,9 @@ layout: default
         <h1 id="!">
             printf - Prints out to stdin<br>fprintf - Prints out to a FILE *<br>sprintf - Prints out to a const char *
         </h1>
+        <p>
+            dprintf, snprintf, vprintf, vfprintf, vsprintf, vdprintf, vsnprintf
+        </p>
         <a href="../../index.html#stdio.h">&lt;&lt; BACK</a>
         <p>
             <h1 id="synopsis">SYNOPSIS</h1>
