added cmdtools/gcc to index.html

--- a/index.html
+++ b/index.html
@@ -98,5 +98,9 @@ layout: default
             <li>fork()</li>
             <li>exec()</li>
         </ul>
+        <h1 id="cmdtools">Command-line Tools</h1>
+        <ul>
+            <li><a href="cmdtools/gcc">gcc</a></li>
+        </ul>
     </body>
 </html>
