--- a/cmdtools/gcc/index.html
+++ b/cmdtools/gcc/index.html
@@ -11,7 +11,7 @@ layout: default
         <h1 id="!">
             gcc - GNU Compiler Collection
         </h1>
-        <a href="../../index.html#cmdtools">&lt;&lt; BACK</a>
+        <a href="../../index.html#compilers">&lt;&lt; BACK</a>
         <p>
             GCC/G++ is a C and C++ compiler by GNU.<br>
             <small class="wiki-warning wiki-stub">This article about GCC is a STUB. You can help by <a class="wiki-expanding" href="https://dev-corporations-ltd.github.io/cmanuals">expanding</a> it.</small>
