--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ layout: default
             <li>exec()</li>
         </ul>
         <h1 id="cmdtools">Command-line Tools</h1>
+        <h2 id="compilers">Compilers</h2>
         <ul>
+            <li><a href="cmdtools/clang">clang</a></li>
             <li><a href="cmdtools/gcc">gcc</a></li>
         </ul>
     </body>
