--- a/index.html
+++ b/index.html
@@ -104,5 +104,8 @@ layout: default
             <li><a href="cmdtools/clang">clang</a></li>
             <li><a href="cmdtools/gcc">gcc</a></li>
         </ul>
+        <ul>
+            <li><a href="cmdtools/valgrind">valgrind</a></li>
+        </ul>
     </body>
 </html>
