ADDED FAVICON TO HTML FILES

--- a/cmdtools/gcc/index.html
+++ b/cmdtools/gcc/index.html
@@ -6,6 +6,7 @@ layout: default
     <head>
         <title>gcc - cmanuals</title>
         <meta charset="utf-8">
+        <link rel="icon" href="/cmanuals/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <h1 id="!">
