--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <head>
         <title>Manual for ISO C99</title>
         <meta charset="utf-8">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
         <h1>
