--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ layout: default
         <h2 id="compilers">Compilers</h2>
         <ul>
             <li><a href="cmdtools/clang">clang</a></li>
+            <li><a href="cmdtools/make">make</a></li>
             <li><a href="cmdtools/gcc">gcc</a></li>
         </ul>
         <ul>
