--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         <h1>
             ISO C99 Manual Page
         </h1>
-        <a href="https://dev-corporations-inc.github.io">&lt;&lt; BACK</a>
+        <a href="https://d-util.github.io">&lt;&lt; BACK</a>
         <em><strong>NOTE:</strong> This is not the official manual to the C Programming Language <wbr>(aka ISO C99, now ISO/IEC 9899:2024 aka C23). <wbr><br>This is just a place for reference, the official C manual might be kinda hard to read: <a href="https://www.iso.org/standard/82075.html">official C manual, ISO/IEC 9899:2024</a></em><br>
         <h3 id="complex.h">complex.h</h3>
         <ul>
